# My-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  benchmark_report.json  install_and_test.sh  main.py  michael  requirements.txt
agent/: __init__.py  coordinator.py  engine.py  executor.py  external_memory_integration.py  planner.py  reflector.py  tools.py
bug_test_project/: README.md  app.py  config.py  database.py  issues_report.md
cli/: __init__.py  commands.py  interface.py  michael.py
mcp/: __init__.py  client.py  protocol.py
memory/: commands.py  cross_session_memory.py  current_session.json  embedding_store.py  external_memory.py  progress.json  state_manager.py
skills/: __init__.py  registry.py
test_workspace/: database.py  fix_qwen.py  gemma_prompt.md  project_spec.md  qwen_prompt.md  test_gemma.sh  test_gemma_api.sh  test_gemma_v2.sh  test_gemma_v3.sh  test_qwen.sh  test_qwen_api.sh  test_qwen_v2.sh  test_qwen_v3.sh
test_workspace/night_tests/round4/qwen/snippets/: pyproject.toml
test_workspace/night_tests/round4/qwen/snippets/src/number_analyzer/: __init__.py  __main__.py  cli.py  core.py
test_workspace/night_tests/round4/qwen/snippets/tests/: test_core.py
tests/: conftest.py  test_agent.py  test_browser_tools.py  test_coordinator.py  test_e2e.py  test_edge_cases.py  test_engine.py  test_executor.py  test_layer1_integration.py  test_llm_models.py  test_memory_interface.py  test_memory_system.py  test_phase3_small_model.py  test_phase4_validation.py  test_planner.py  test_reflector.py  test_skill_engine.py  test_skills_models.py  (+1 more)
(+183 files in other folders)
